hello-world/overlays/dev/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - hello-world-dev.test.mhra.gov.uk
